src/components/list/list.scss
@forward './partial-styles/custom-styles';
@forward './partial-styles/has-grid-layout';
@forward './partial-styles/static-actions';
@use '../../style/mixins';

/**
* @prop --icon-background-color: Color to use for icon background when `badgeIcons=true`.
* @prop --icon-color: Color to use for icon. Defaults to grey when `badgeIcons=false`. Defaults to white when `badgeIcons=true`.
* @prop --list-grid-max-width: Maximum width of a list that has `has-grid-layout` class. Defaults to `100%`.
* @prop --list-grid-item-max-width: Maximum width of items in a list that has `has-grid-layout` class. Defaults to `10rem`.
* @prop --list-grid-item-min-width: Minimum width of items in a list that has `has-grid-layout` class. Defaults to `7.5rem`.
* @prop --list-grid-gap: Distance between items in a list that has `has-grid-layout` class. Defaults to `0.75rem`.
* @prop --list-background-color-of-odd-interactive-items: Background color of odd list items, when `has-striped-rows` class is applied to the component. Defaults to `--contrast-200`.
* @prop --list-background-color-of-even-interactive-items:  Background color of even list items, when `has-striped-rows` class is applied to the component. Defaults to `transparent`.
* @prop --list-margin: Space around the list. Defaults to `0.25rem`, which visualizes keyboard-focused items in a better way, as it adds some space for the outline effect.
* @prop --list-item-image-border-radius: Defines the border radius of the list item image. Defaults to `50%`.
* @prop --list-item-image-object-fit: Defines the object-fit property of the list item image. Defaults to `cover`.
*/

:host(limel-list) {
    --limel-list-border-radius: 0.5rem;
    display: block;
    isolation: isolate;
}

:host([hidden]) {
    display: none;
}

ul {
    --mdc-theme-text-icon-on-background: var(
        --icon-color,
        rgb(var(--contrast-900))
    );
    margin: var(
        --list-margin,
        0.25rem
    ); // added space to visualize keyboard-focused items
    border-radius: var(--limel-list-border-radius);
    padding: 0;
    list-style: none;
}

.mdc-deprecated-list-divider {
    border-bottom-color: transparent;
    display: flex;
    align-items: center;
    gap: 0.75rem;
    height: auto;
    padding: 0 0.5rem;
}

.limel-list-divider-line {
    background-color: rgb(var(--contrast-400));
    height: 0.125rem;
    border-radius: 1rem;
    min-width: 1rem;
    flex-grow: 1;
}

.limel-list-divider-title {
    all: unset;
    @include mixins.truncate-text;
    color: rgb(var(--contrast-900));
    font-size: var(--limel-theme-default-small-font-size);
}

